basic Java 8 upgrade
git-svn-id: https://svn.apache.org/repos/asf/bval/branches/bv2.x@1793432 13f79535-47bb-0310-9956-ffa450edef68